--- a/src/main/resources/view/login.fxml
+++ b/src/main/resources/view/login.fxml
@@ -46,13 +46,13 @@
         </HBox>
         <VBox alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <children>
-                <TextField id="emailTextField" fx:id="usernameTextField" prefHeight="28.0" prefWidth="400.0" promptText="email_id@domain.edu" style="-fx-border-color: BLACK;" styleClass="login_text_field" />
+                <TextField id="emailTextField" fx:id="usernameTextField" prefHeight="28.0" prefWidth="400.0" promptText="Enter Username" style="-fx-border-color: BLACK;" styleClass="login_text_field" />
          </children>
         </VBox>
         <VBox alignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="3" />
         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
          <children>
-                <PasswordField fx:id="passwordField" style="-fx-border-color: BLACK;" styleClass="login_password_field" />
+                <PasswordField fx:id="passwordField" promptText="Enter Password" style="-fx-border-color: BLACK;" styleClass="login_password_field" />
          </children>
         </VBox>
         <VBox alignment="CENTER" prefHeight="601.0" prefWidth="723.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
@@ -83,5 +83,10 @@
                     <Font name="System Bold" size="15.0" />
                 </font>
             </Button>
+      <Label fx:id="handleLBL" alignment="TOP_CENTER" prefHeight="117.0" prefWidth="209.0" text="Label" textAlignment="CENTER" textFill="#33ff00" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets top="200.0" />
+         </GridPane.margin>
+      </Label>
     </children>
 </GridPane>
